# checker

./: .env.example  .gitignore  README.md  deploy.py  pyproject.toml  requirements-dev.txt
examples/: example_invalid.pb  example_valid.pb  run_examples.py
examples_internal/: run_checker.py
helpers/: __init__.py  utilities.py
pabulib/: checker.py
pabulib_helpers/: fields.py  fields_validations.py  load_pb_file.py  utilities.py
tests/: test_empty_lines.pb
tests/helpers/: mock_data.py
tests/test_checker/: test_advanced_scenarios.py  test_cumulative_vote_type_requirements.py  test_empty_line_removal.py  test_integration.py  test_new_functionality.py  test_robust_comprehensive.py  test_robust_empty_fields.py  test_robust_missing_fields.py  test_rules.py  test_unit.py  test_vote_type_and_structure.py
