[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pabulib"
version = "0.1.0"
description = "A Python library for validating files in the PB (Pabulib) format, ensuring compliance with the standards described at pabulib.org/format."
authors = [
    { name = "Ignacy Janiszewski", email = "ignacy.janiszewsk@uj.edu.pl" }
]
license = { text = "MIT" }
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
keywords = ["checker", "file validation", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]